packages/apex-parser-ast/test/fixtures/validation/syntax-error/UnmatchedSyntax.cls
public class UnmatchedSyntax {
    public void test() {
        };
    }
}
